--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         <div class="col-6 mb-2 float-right">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search">
-            <button class="btn btn-success" type="button">
+            <button class="btn btn-light" type="button">
               <i class="fas fa-search"></i>
             </button>
           </div>
@@ -50,8 +50,8 @@
   </body>
   
   <footer>
-    <div class=" w-25 bg-warning">
-      
+    <div class="text-warning py-5 h-75 bg-warning">
+      表示なし
     </div>
   </footer>
 </html>
