[Break]トップページ中断

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
   </body>
   
   <footer>
-    <div class="text-warning py-5 h-75 bg-warning">
+    <div class="text-warning y-5 h-75 bg-warning">
       表示なし
     </div>
   </footer>
