--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,19 +1,26 @@
 <div class="container">
   <div class="row">
     
-    <div class="col-3 my-3">
+    <div class="col-2 my-3">
       <%= render 'public/left_contents' %>
     </div>
     
     <div class="col-8 offset-1">
       <div>
-        <div>
+        <div class=" py-5 text-center">
           ようこそ、ながのCAKEへ！<br>
           このサイトは、ケーキ販売のECサイトになります。<br>
           会員でない方も商品の閲覧はできますが、<br>
           購入には会員登録が必要になります。
         </div>
       </div>
+      
+      <h2 class="my-3">新着商品</h2>
+        <!--
+          % @items.each do %>
+          
+          % end %>
+        -->
     </div>
     
   </div>
