--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -1,22 +1,18 @@
- <table class="table border">
-    <thred>
-      <tr>
-        <th class="text-center py-1 px-4">ジャンル検索</th>
-      </tr>
-    </thred>
-    <tbody>
-      <tr>
-        <td class="border-bottom-0">ケーキ</td>
-      </tr>
-      <tr>
-        <td class="border-bottom-0">焼き菓子</td>
-      </tr>
-      <tr>
-        <td class="border-bottom-0">プリン</td>
-      </tr>
-      <tr>
-        <td>キャンディ</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="border">
+  <h5 class="border-bottom p-2 text-center">ジャンル検索</h5>
+  
+  <ul class="list-unstyled px-2">
+    <li class="p-2">
+      ケーキ
+    </li>
+    <li class="p-2">
+      焼き菓子
+    </li>
+    <li class="p-2">
+      プリン
+    </li>
+    <li class="p-2">
+      キャンディ
+    </li>
+  </ul>
 </div>
