--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,43 @@
 
         <div class="col-6">
           <ul class="navbar list-inline-item list-unstyled">
+            
+            <!--顧客ログイン時-->
+            <% if customer_signed_in? %>
+            <li class="nav-item btn btn-light text-decoration-none">
+              <%= link_to "マイページ", public_customers_edit_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "商品一覧", public_items_index_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "カート", public_cart_items_index_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "ログアウト", customer_session_path, method: :delete %>
+            </li>
+         
+            <!--管理者ログイン時-->
+            <% elsif admin_signed_in? %>
+            <li class="nav-item btn btn-light text-decoration-none">
+              <%= link_to "商品一覧", admin_items_index_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "会員一覧", admin_customers_index_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "注文履歴一覧", admin_orders_show_path %>
+            </li>
+
+            <li class="nav-item btn btn-light">
+              <%= link_to "ジャンル一覧", admin_genres_index_path %>
+            </li>
+            <li class="nav-item btn btn-light">
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+            </li>
+
+            <!--一般閲覧画面時-->
+            <% else %>
             <li class="nav-item btn btn-light text-decoration-none">
               <%= link_to "About", about_path %>
             </li>
@@ -36,6 +73,7 @@
             <li class="nav-item btn btn-light">
               <%= link_to "ログイン", new_customer_session_path %>
             </li>
+            <% end %>
           </ul>
         <div class="col-6 mb-2 float-right">
           <div class="input-group">
