--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,73 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4 class="py-3">マイページ</h4>
+  </div>
+  
+  <div class="row py-3">
+    <div class="col-2 pr-3">
+      <h5>登録情報</h5>
+      
+      <div class="col-10">
+        <%= link_to "編集する", customers_information_edit_path(@customer), class: 'btn btn-success' %>
+      </div>
+    </div>
+  </div>
+    
+  <div class="row">
+    <table>
+      <thead>
+        <tr>
+          <th>氏名</th>
+          <td>
+            <%= @customer.last_name %>
+            <%= @customer.first_name %>
+            </td>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <td>
+            <%= @customer.last_name_kana %>
+            <%= @customer.first_name_kana %>
+          </td>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <td><%= @customer.post_code %></td>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <td><%= @customer.address %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td><%= @customer.email %></td>
+        </tr>
+      </thead>
+    </table>
+  </div>
+  
+  <div class="row py-3">
+    <div class="col-2 pr-3">
+      <h5>配送先</h5>
+      
+      <div class="col-10">
+        <%= link_to "一覧を見る", addresses_path(@customer), class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row py-3">
+    <div class="col-2 pr-3">
+      <h5>注文履歴</h5>
+      
+      <div class="col-10">
+        <%= link_to "一覧を見る", orders_path(@customer), class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+    
+</div>
