--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4>ジャンル編集</h4>
+  </div>
+  
+  <div class="row">
+    <div class="pr-3">ジャンル名</div>
+    <%= form_with model: @genre do |f| %>
+      <div class="mr-3">
+        <%= f.text_field :name %>
+      </div>
+      <div class="px-2">
+        <%= f.submit "変更を", class: 'btn btn-success' %>
+      </div>
+    <% end %>
+
+  </div>
+</div>
