--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
             </li>
 
             <li class="nav-item btn btn-light">
-              <%= link_to "ジャンル一覧", admin_genres_index_path %>
+              <%= link_to "ジャンル一覧", admin_genres_path %>
             </li>
             <li class="nav-item btn btn-light">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
