--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div class="pr-3">ジャンル名</div>
-    <%= form_with model: @genre do |f| %>
+    <%= form_with model: @genre, url: edit_admin_genre_path do |f| %>
       <div class="mr-3">
         <%= f.text_field :name %>
       </div>
