--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -5,7 +5,7 @@
   
   <div class="row">
     <div class="pr-3">ジャンル名</div>
-    <%= form_with model: @genre do |f| %>
+    <%= form_with model: @genre, url: admin_genres_path do |f| %>
       <div class="mr-3">
         <%= f.text_field :name, placeholder: "ジャンル名" %>
       </div>
@@ -16,14 +16,15 @@
   </div>
   
   <div class="row pt-5">
-    <p class="border-bottom border-top p-2">ジャンル</p>
-  
     <ul class="list-unstyled px-2">
+
+    <li class="border-bottom border-top p-2">ジャンル</li>
+  
       
-      <% @genres.name.each do |name| %>
+      <% @genres.each do |genre| %>
       <li class="p-2 border-bottom">
-        <%= name %>
-        <%= link_to "編集する", edit_admin_genre_path(name), class: 'btn btn-success' %>
+        <%= genre.name %>
+        <%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-success' %>
       </li>
       <% end %>
       
