--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,13 +30,13 @@
             <div>ようこそ、<%= current_customer.last_name %>さん！</div>
 
             <li class="nav-item btn btn-light text-decoration-none">
-              <%= link_to "マイページ", public_customers_edit_path %>
+              <%= link_to "マイページ", customers_mypage_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "商品一覧", public_items_index_path %>
+              <%= link_to "商品一覧", items_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "カート", public_cart_items_index_path %>
+              <%= link_to "カート", cart_items_index_path %>
             </li>
             <li class="nav-item btn btn-light">
               <%= link_to "ログアウト", customer_session_path, method: :delete %>
@@ -45,13 +45,13 @@
             <!--管理者ログイン時-->
             <% elsif admin_signed_in? %>
             <li class="nav-item btn btn-light text-decoration-none">
-              <%= link_to "商品一覧", admin_items_index_path %>
+              <%= link_to "商品一覧", admin_items_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "会員一覧", admin_customers_index_path %>
+              <%= link_to "会員一覧", admin_customers_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "注文履歴一覧", admin_orders_show_path %>
+              <%= link_to "注文履歴一覧", admin_path %>
             </li>
 
             <li class="nav-item btn btn-light">
@@ -67,7 +67,7 @@
               <%= link_to "About", about_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "商品一覧", public_items_index_path %>
+              <%= link_to "商品一覧", items_path %>
             </li>
             <li class="nav-item btn btn-light">
               <%= link_to "新規登録", new_customer_registration_path %>
