--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -5,12 +5,12 @@
 
   <div class="row">
     <div class="pr-3">ジャンル名</div>
-    <%= form_with model: @genre, url: edit_admin_genre_path do |f| %>
+    <%= form_with model: @genre, url: admin_genre_path, method: :patch do |f| %>
       <div class="mr-3">
         <%= f.text_field :name %>
       </div>
       <div class="px-2">
-        <%= f.submit "変更を", class: 'btn btn-success' %>
+        <%= f.submit "変更を保存", class: 'btn btn-success' %>
       </div>
     <% end %>
 
