--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,10 @@
               <%= link_to "商品一覧", items_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "カート", cart_items_index_path %>
+              <%= link_to "カート", cart_items_path %>
             </li>
             <li class="nav-item btn btn-light">
-              <%= link_to "ログアウト", customer_session_path, method: :delete %>
+              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
             </li>
 
             <!--管理者ログイン時-->
