--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -71,12 +71,15 @@
       <div class="actions col-3 offset-3">
         <%= f.submit "編集内容を保存",  class: 'btn btn-success ml-5' %>
       </div>
+  
       <div class="col-3">
-        <%= f.submit "退会する", class: 'btn btn-danger ml-5' %>
+        <%= link_to "退会する", customers_confirm_path(@customer), class: 'btn btn-danger ml-5' %>
       </div>
     </div>
-
+    
   <% end %>
+
+
 
 
 </div>
