--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,42 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4>商品新規登録</h4>
+  </div>
+  
+  <div class="row">
+    <%= form_with model: @items, url:new_admin_item_path do |f| %>
+    
+    <div>
+      商品画像
+      <%= f.file_field :image, accept: "image/*" %>
+    </div>
+    
+    <div>
+      商品名
+      <%= f.text_field :name, placeholder: "商品名" %>
+    </div>
+    
+    <div>
+      商品説明
+      <%= f.text_area :introduction, placeholder: "ここに説明文を記述します" %>
+    </div>
+    
+    <div>
+      ジャンル
+    </div>
+    
+    <div>
+      税抜価格
+      <%= f.text_field :price, placeholder: "1000" %>
+    </div>
+    
+    <div>
+      販売ステータス
+    </div>
+    
+    <div>
+      <%= f.submit "新規登録", class: 'btn btn-success' %>
+    </div>
+    <% end %>
+  </div>
+</div>
