--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,11 +4,11 @@
   </div>
   
   <div class="row">
-    <%= form_with model: @items, url:new_admin_item_path do |f| %>
+    <%= form_with model: @items, url:admin_items_path, method: :post do |f| %>
     
     <div>
       商品画像
-      <%= f.file_field :image, accept: "image/*" %>
+      <%= f.file_field :item_image, accept: "image/*" %>
     </div>
     
     <div>
@@ -23,6 +23,7 @@
     
     <div>
       ジャンル
+      <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name) %>
     </div>
     
     <div>
@@ -32,6 +33,11 @@
     
     <div>
       販売ステータス
+      <%= f.radio_button :is_sale, "true" %>
+      <%= f.label :is_sale_true, "販売中" %>
+      
+      <%= f.radio_button :is_sale, "false" %>
+      <%= f.label :is_sale_false, "販売停止中" %>
     </div>
     
     <div>
