--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <%= image_tag @item.get_item_image %>
+    </div>
+    
+    <div class="col-9">
+      <div>
+        商品名
+        <%= @item.name %>
+      </div>
+      <div>
+        商品説明
+        <%= @item.introduction %>
+      </div>
+      <div>
+        ジャンル
+        <%= @item.genre_id %>
+      </div>
+      <div>
+        税込価格(税抜価格)
+        <%= @item.price*1.1(@item.price) %>
+      </div>
+      <div>
+        販売ステータス
+        <%= @item.is_sale %>
+      </div>
+    </div>
+    <div class="row my-4">
+      <%= link_to "編集する", edit_item_path(@item), class: 'btn btn-success' %>
+    </div>
+  </div>
+</div>
