--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <h4>商品一覧</h4>
+    </div>
+    <div class="col-6">
+      <%= link_to "+", new_admin_item_path, class: 'btn btn-light, rounded-circle p-0' %>
+    </div>
+  </div>
+  
+  <div class="row">
+    <table>
+      
+      <thead>
+        <th>商品ID</th>
+        <th>商品名</th>
+        <th>税抜価格</th>
+        <th>ジャンル</th>
+        <th></th>
+        <th>ステータス</th>
+      </thead>
+      
+      <tbody>
+        <% @items.each do |item| %>
+        
+        <td><%= @item.id %></td>
+        <td><%= link_to @item.name, url:admin_item_path(@item) %></td>
+        <td><%= @item.price %></td>
+        <td><%= @item.genre_id %></td>
+        <td></td>
+        <td><%= @item.status %></td>
+        
+        <% end %>
+      </tbody>
+    </table>
+    
+    <%= pagenate items %>
+  </div>
+</div>
