[Update]顧客商品各画面

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,7 +17,7 @@
 
       <h2 class="my-3">新着商品</h2>
         <!--
-          % @items.each do %>
+          % @items.each do |item| %>
 
           % end %>
         -->
