--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -23,12 +23,12 @@
       <tbody>
         <% @items.each do |item| %>
         
-        <td><%= @item.id %></td>
-        <td><%= link_to @item.name, url:admin_item_path(@item) %></td>
-        <td><%= @item.price %></td>
-        <td><%= @item.genre_id %></td>
+        <td><%= item.id %></td>
+        <td><%= link_to item.name, url:admin_item_path(item) %></td>
+        <td><%= item.price %></td>
+        <td><%= item.genre_id %></td>
         <td></td>
-        <td><%= @item.status %></td>
+        <td><%= item.status %></td>
         
         <% end %>
       </tbody>
