--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-2">
+      <%= render 'public/left_contents' %>
+    </div>
+    
+    <div class="col-8 offset-1">
+      <h4>商品一覧<span>（全<%= @items.count %>件）</span></h4>
+      
+      <% @items.each do |item| %>
+      
+        <%= image_tag item.get_item_image(100, 100 %>
+        <%= item.name %>
+        <%= item.price %>
+      
+      <% end %>
+      <%= pagenate items %>
+    </div>
+  </div>
+</div>
