[Update]顧客コントローラ検索機能記述のみ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,11 @@
         </div>
 
         <div class="col-7">
-          <ul class="navbar list-inline-item list-unstyled">
 
             <!--顧客ログイン時-->
-            <% if customer_signed_in? %>
+          <% if customer_signed_in? %>
+          <ul class="navbar list-inline-item list-unstyled">
+            
             <div>ようこそ、<%= current_customer.last_name %>さん！</div>
 
             <li class="nav-item btn btn-light text-decoration-none">
@@ -41,9 +42,33 @@
             <li class="nav-item btn btn-light">
               <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
             </li>
-
+          </ul>
+          
+          <div class="col-6 mb-2 float-right">
+            <%= form_with url:items_path, method: :get do |f| %>
+            
+              <%= f.text_field :name, placeholder: "Seach" %>
+              <%= f.submit url:items_path do %>
+                <button class="btn btn-light" type="button">
+                  <i class="fas fa-search"></i>
+                </button>
+              <% end %>
+              
+            <% end %>
+          </div>
+        <!--<div class="col-6 mb-2 float-right">-->
+        <!--  <div class="input-group">-->
+        <!--    <input type="text" class="form-control" placeholder="Search">-->
+        <!--    <button class="btn btn-light" type="button">-->
+        <!--      <i class="fas fa-search"></i>-->
+        <!--    </button>-->
+        <!--  </div>-->
+        <!--</div>-->
+        
             <!--管理者ログイン時-->
-            <% elsif admin_signed_in? %>
+          <% elsif admin_signed_in? %>
+          <ul class="navbar list-inline-item list-unstyled">
+            
             <li class="nav-item btn btn-light text-decoration-none">
               <%= link_to "商品一覧", admin_items_path %>
             </li>
@@ -60,9 +85,20 @@
             <li class="nav-item btn btn-light">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
             </li>
-
+          </ul>
+        <div class="col-6 mb-2 float-right">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search">
+            <button class="btn btn-light" type="button">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
+        
             <!--一般閲覧画面時-->
-            <% else %>
+          <% else %>
+          <ul class="navbar list-inline-item list-unstyled">
+            
             <li class="nav-item btn btn-light text-decoration-none">
               <%= link_to "About", about_path %>
             </li>
@@ -75,7 +111,6 @@
             <li class="nav-item btn btn-light">
               <%= link_to "ログイン", new_customer_session_path %>
             </li>
-            <% end %>
           </ul>
         <div class="col-6 mb-2 float-right">
           <div class="input-group">
@@ -85,7 +120,7 @@
             </button>
           </div>
         </div>
-
+        <% end %>
         </div>
 
 
