--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -9,7 +9,7 @@
       
       <% @items.each do |item| %>
       
-        <%= image_tag item.get_item_image(100, 100 %>
+        <%= image_tag item.get_item_image(100, 100) %>
         <%= item.name %>
         <%= item.price %>
       
