[Update]商品新規登録機能

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="row">
-    <%= form_with model: @items, url:admin_item_path, method: :patch do |f| %>
+    <%= form_with model: @item, url:admin_item_path, method: :patch do |f| %>
 
     <div>
       商品画像
