--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="row">
-    <%= form_with model: @items, url:admin_items_path, method: :post do |f| %>
+    <%= form_with model: @item, url:admin_items_path, method: :post do |f| %>
 
     <div>
       商品画像
