--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-      <%= image_tag @item.get_item_image %>
+      <%= image_tag @item.get_item_image(200, 200) %>
     </div>
-    
+
     <div class="col-9">
       <div>
         商品名
@@ -15,11 +15,12 @@
       </div>
       <div>
         ジャンル
-        <%= @item.genre_id %>
+        <%= @item.genre.name %>
       </div>
       <div>
         税込価格(税抜価格)
-        <%= @item.price*1.1(@item.price) %>
+        <%= @item.price*1.1 %>
+        (<%= @item.price %>)
       </div>
       <div>
         販売ステータス
@@ -27,7 +28,7 @@
       </div>
     </div>
     <div class="row my-4">
-      <%= link_to "編集する", edit_item_path(@item), class: 'btn btn-success' %>
+      <%= link_to "編集する", edit_admin_item_path(@item), class: 'btn btn-success' %>
     </div>
   </div>
 </div>
