--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -3,19 +3,19 @@
     <div class="text-center">
       <h4>本当に退会しますか？</h4>
     </div>
-    <div class="pt-4text-center">
+    <div class="pt-4 text-center">
       退会すると、会員登録情報や<br>
       これまでの購入履歴が閲覧できなくなります。<br>
       退会する場合は、「退会する」をクリックしてください。
     </div>
   </div>
-  
+
   <div class="row">
     <div class="col-6">
       <%= link_to "退会しない", customers_mypage_path(@customer), class: 'btn btn-primary' %>
     </div>
     <div class="col-6">
-      <%= link_to "退会する", customers_resign_path(@customer), method: :patch, class: 'btn btn-danger' %>
+      <%= link_to "退会する", customers_resign_path, method: :patch, class: 'btn btn-danger' %>
     </div>
   </div>
 </div>
