--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -3,16 +3,16 @@
   
   <ul class="list-unstyled px-2">
     <li class="p-2">
-      <%= link_to "ケーキ", items_path(genre_name: "ケーキ") %>
+      <%= link_to "ケーキ", items_path(genre_name: genre.name) %>
     </li>
     <li class="p-2">
-      <%= link_to "焼き菓子", items_path(genre_name: "焼き菓子") %>
+      <%= link_to "焼き菓子", items_path(genre_name: genre.name) %>
     </li>
     <li class="p-2">
-      <%= link_to "プリン", items_path(genre_name: "プリン") %>
+      <%= link_to "プリン", items_path(genre_name: genre.name) %>
     </li>
     <li class="p-2">
-      <%= link_to "キャンディ", items_path(genre_name: "キャンディ") %>
+      <%= link_to "キャンディ", items_path(genre_name: genre.name) %>
     </li>
   </ul>
 </div>
