--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,20 +1,37 @@
 <div class="container">
   <div class="row">
     <div class="col-2">
-      <%= render 'public/left_contents' %>
+      <%= render 'public/left_contents', genre: @genre %>
     </div>
-    
+
     <div class="col-8 offset-1">
-      <h4>商品一覧<span>（全<%= @items.count %>件）</span></h4>
-      
-      <% @items.each do |item| %>
-      
-        <%= image_tag item.get_item_image(100, 100) %>
-        <%= item.name %>
-        <%= item.price %>
-      
+
+      <% if params[:genre_name].present? %>
+        <h4><%= @genres.name %>一覧<span>（全<%= @items.count %>件）</span></h4>
+
+         <% @items.each do |item| %>
+
+           <%= image_tag item.get_item_image(100, 100) %>
+           <%= item.name %>
+           <%= item.price %>
+
+         <% end %>
+         <%= paginate @genres %>
+
+      <% else %>
+        <h4>商品一覧<span>（全<%= @items.count %>件）</span></h4>
+
+        <% @items.each do |item| %>
+
+          <%= image_tag item.get_item_image(100, 100) %>
+          <%= item.name %>
+          <%= item.price %>
+
+        <% end %>
+        <%= paginate @items %>
+
       <% end %>
-      <%= pagenate items %>
+
     </div>
   </div>
 </div>
