--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -1,18 +1,18 @@
 <div class="border">
   <h5 class="border-bottom p-2 text-center">ジャンル検索</h5>
-  
+
   <ul class="list-unstyled px-2">
     <li class="p-2">
-      <%= link_to "ケーキ", items_path(genre_name: genre.name) %>
+      ケーキ
     </li>
     <li class="p-2">
-      <%= link_to "焼き菓子", items_path(genre_name: genre.name) %>
+      焼き菓子
     </li>
     <li class="p-2">
-      <%= link_to "プリン", items_path(genre_name: genre.name) %>
+      プリン
     </li>
     <li class="p-2">
-      <%= link_to "キャンディ", items_path(genre_name: genre.name) %>
+      キャンディ
     </li>
   </ul>
 </div>
