--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,24 +1,24 @@
 <div class="container">
   <div class="row">
     <div class="col-2">
-      <%= render 'public/left_contents', genre: @genre %>
+      <%= render 'public/left_contents' %>
     </div>
 
     <div class="col-8 offset-1">
 
-      <% if params[:genre_name].present? %>
-        <h4><%= @genres.name %>一覧<span>（全<%= @items.count %>件）</span></h4>
+      <!--% if params[:genre_name].present? %>-->
+      <!--  <h4>%= @genres.name %>一覧<span>（全%= @items.count %>件）</span></h4>-->
 
-         <% @items.each do |item| %>
+      <!--   % @items.each do |item| %>-->
 
-           <%= image_tag item.get_item_image(100, 100) %>
-           <%= item.name %>
-           <%= item.price %>
+      <!--     %= image_tag item.get_item_image(100, 100) %>-->
+      <!--     %= item.name %>-->
+      <!--     %= item.price %>-->
 
-         <% end %>
-         <%= paginate @genres %>
+      <!--  % end %>-->
+      <!--  %= paginate @genres %>-->
 
-      <% else %>
+      <!--% else %>-->
         <h4>商品一覧<span>（全<%= @items.count %>件）</span></h4>
 
         <% @items.each do |item| %>
@@ -30,7 +30,7 @@
         <% end %>
         <%= paginate @items %>
 
-      <% end %>
+      <!--% end %>-->
 
     </div>
   </div>
