--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,35 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div class="container">
+  <div class="row p-4">
+    <h4>配送先編集</h4>
+  </div>
+  
+  <%= form_with model: @address, url:address_path, method: :patch do |f| %>
+  
+    <div class="row py-1">
+      <div class="col-3">郵便番号(ハイフンなし)</div>
+      <div class="col-9">
+        <%= f.text_field :post_code %>
+      </div>
+    </div>
+    
+    <div class="row py-1">
+      <div class="col-3">住所</div>
+      <div class="col-5">
+        <%= f.text_field :address, class: 'form-control' %>
+      </div>
+      <div class="col-4"></div>
+    </div>
+    
+    <div class="row py-1">
+      <div class="col-3">宛名</div>
+      <div class="col-5">
+        <%= f.text_field :name %>
+      </div>
+      <div class="col-4">
+        <%= f.submit "変更を保存", class: 'btn btn-success' %>
+      </div>
+    </div>
+
+  <% end %>
+
+</div>
