--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -3,7 +3,7 @@
     <h4>配送先登録/一覧</h4>
   </div>
 
-  <%= form_with model: @address, url:addresses_path do |f| %>
+  <%= form_with model: @address, url:addresses_path, method: :post do |f| %>
 
     <div class="row py-1">
       <div class="col-3">郵便番号(ハイフンなし)</div>
@@ -45,9 +45,9 @@
         </tr>
       </thead>
 
-      <% @addresses.each do |address| %>
-
       <tbody>
+
+        <% @addresses.each do |address| %>
         <tr>
           <td class="py-1">
             <%= address.post_code %>
@@ -63,9 +63,10 @@
             <%= link_to "削除する", address_path, method: :delete, class: 'btn btn-danger' %>
           </td>
         </tr>
+        <% end %>
+
       </tbody>
 
-      <% end %>
 
       </table>
     </div>
