--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -60,7 +60,7 @@
           </td>
           <td class="py-1">
             <%= link_to "編集する", edit_address_path(address), class: 'btn btn-success' %>
-            <%= link_to "削除する", address_path, method: :delete, class: 'btn btn-danger' %>
+            <%= link_to "削除する", address_path(address), method: :delete, class: 'btn btn-danger' %>
           </td>
         </tr>
         <% end %>
