[Update]マイページレイアウト調整

--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -35,7 +35,7 @@
   <div class="row pt-5">
 
     <div class="col-8">
-    <table class="table">
+    <table class="table table-bordered">
       <thead>
         <tr>
           <th class="py-1">郵便番号</th>
