--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,20 +1,18 @@
 <div class="container">
   <div class="row">
-    <h4 class="py-3">マイページ</h4>
+    <h4 class="py-4 px-5">マイページ</h4>
   </div>
-  
+
   <div class="row py-3">
-    <div class="col-2 pr-3">
-      <h5>登録情報</h5>
-      
-      <div class="col-10">
-        <%= link_to "編集する", customers_information_edit_path(@customer), class: 'btn btn-success' %>
-      </div>
+    <h5 class="pr-3">登録情報</h5>
+    <div>
+       <%= link_to "編集する", customers_information_edit_path(@customer), class: 'btn btn-success' %>
     </div>
   </div>
-    
+
   <div class="row">
-    <table>
+    <div class="col-8">
+      <table class="table table-bordered">
       <thead>
         <tr>
           <th>氏名</th>
@@ -48,26 +46,22 @@
         </tr>
       </thead>
     </table>
+    </div>
+    <div class="col-3"></div>
   </div>
-  
+
   <div class="row py-3">
-    <div class="col-2 pr-3">
-      <h5>配送先</h5>
-      
-      <div class="col-10">
-        <%= link_to "一覧を見る", addresses_path(@customer), class: 'btn btn-primary' %>
-      </div>
+    <h5 class="pr-5">配送先</h5>
+    <div>
+      <%= link_to "一覧を見る", addresses_path(@customer), class: 'btn btn-primary' %>
     </div>
   </div>
-  
-  <div class="row py-3">
-    <div class="col-2 pr-3">
-      <h5>注文履歴</h5>
-      
-      <div class="col-10">
-        <%= link_to "一覧を見る", orders_path(@customer), class: 'btn btn-primary' %>
-      </div>
+
+  <div class="row pt-3 pb-5">
+    <h5 class="pr-4">注文履歴</h5>
+    <div>
+      <%= link_to "一覧を見る", orders_path(@customer), class: 'btn btn-primary' %>
     </div>
   </div>
-    
+
 </div>
