--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,21 +1,27 @@
 <div class="container">
-  <div class="row">
-    <div class="text-center">
+  <div class="row m-5">
+    <div class="col-4 offset-4 center-block">
       <h4>本当に退会しますか？</h4>
     </div>
-    <div class="pt-4 text-center">
+    <div class="col-4"></div>
+  </div>
+
+  <div class="row ml-3">
+    <div class="col-7 offset-2 center-block text-center">
       退会すると、会員登録情報や<br>
       これまでの購入履歴が閲覧できなくなります。<br>
       退会する場合は、「退会する」をクリックしてください。
     </div>
+    <div class="col-3"></div>
   </div>
 
-  <div class="row">
-    <div class="col-6">
+  <div class="row my-5">
+    <div class="col-2 offset-4 center-block">
       <%= link_to "退会しない", customers_mypage_path(@customer), class: 'btn btn-primary' %>
     </div>
-    <div class="col-6">
+    <div class="col-2">
       <%= link_to "退会する", customers_resign_path, method: :patch, class: 'btn btn-danger' %>
     </div>
+    <div class="col-4"></div>
   </div>
 </div>
