--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-2">
+    <div class="col-2 pt-4">
       <%= render 'public/left_contents' %>
     </div>
 
-    <div class="col-8 offset-1">
+    <div class="col-10 pt-4">
 
       <!--% if params[:genre_name].present? %>-->
       <!--  <h4>%= @genres.name %>一覧<span>（全%= @items.count %>件）</span></h4>-->
@@ -20,16 +20,18 @@
 
       <!--% else %>-->
         <h4>商品一覧<span>（全<%= @items.count %>件）</span></h4>
+        <div class="pr-1">
+          <% @items.each do |item| %>
 
-        <% @items.each do |item| %>
+            <%= link_to item_path(item) do %>
+              <%= image_tag item.get_item_image(150, 200) %>
+            <% end %>
+            <%= item.name %>
+            <%= item.price %>
 
-          <%= link_to item_path(item) do %>
-            <%= image_tag item.get_item_image(100, 100) %>
           <% end %>
-          <%= item.name %>
-          <%= item.price %>
+        </div>
 
-        <% end %>
         <%= paginate @items %>
 
       <!--% end %>-->
