--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -33,9 +33,9 @@
             <%= @price %>
           </th>
           <th>
-            <%= form_with model: @item, url:cart_item_path, method: :patch do |f| %>
+            <%= form_with model: @cart_item, url:cart_item_path, method: :patch do |f| %>
               <%= f.select :amount, *[1..5] %>
-              <%= f.submit "変更", cart_items_path, class: 'btn btn-success' %>
+              <%= f.submit "変更", class: 'btn btn-success' %>
             <% end %>
           </th>
           <th><%= @price * item.amount %></th>
@@ -54,6 +54,7 @@
           <th></th>
         </tr>
       </tbody>
+      
     </table>
     </div>
     <div class="col-1"></div>
@@ -61,8 +62,9 @@
 
   <div class="row m-5">
     <div class="col-4 offset-4">
-      <%= link_to "情報入力に進む", new_order_path(@customer), class: 'btn btn-success' %>
+      <%= link_to "情報入力に進む", new_order_path, class: 'btn btn-success' %>
     </div>
+    <div class="col-4"></div>
   </div>
 
 </div>
