--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -26,23 +26,24 @@
         <% @cart_items.each do |cart_item| %>
         <tr>
           <td>
-            <%= image_tag cart_item.get_item_image(50, 50) %>
-            <%= cart_item.name %>
+            <%= image_tag cart_item.item.get_item_image(50, 50) %>
+            <%= cart_item.item.name %>
           </td>
           <td>
             <%= cart_item.item.with_tax_price %>
           </td>
           <td>
-            <%= form_with model: @cart_item, url:cart_item_path, method: :patch do |f| %>
+            <%= form_with model: cart_item, url: cart_item_path(cart_item), method: :patch do |f| %>
               <%= f.select :amount, *[1..5] %>
               <%= f.submit "変更", class: 'btn btn-success' %>
             <% end %>
           </td>
           <td><%= cart_item.subtotal %></td>
           <td>
-            <%= link_to "削除する", cart_item_path(item), method: :delete, class: 'btn btn-danger' %>
+            <%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: 'btn btn-danger' %>
           </td>
         </tr>
+        <% end %>
         <tr>
           <td>
             <%= link_to "買い物を続ける", items_path, class: 'btn btn-primary' %>
@@ -50,11 +51,10 @@
           <td></td>
           <td></td>
           <td>合計金額</td>
-          <td><% @合計金額 += cart_item.subtotal %></td>
+          <td><%= @total_price %></td>
         </tr>
-        <% end %>
       </tbody>
-      
+
     </table>
     </div>
     <div class="col-1"></div>
