--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4>注文情報入力</h4>
+  </div>
+  
+  <%= form_with model: @order, url:orders_confirm do |f| %>
+    <div class="row">
+      <h6>支払い方法</h6>
+      <div>
+        <%= f.radio_button :payment_method, "credit_card" %>
+        <%= f.label :payment_method_credit_card, "クレジットカード" %>
+        
+        <%= f.radio_button :payment_method, "transfer" %>
+        <%= f.label :payment_method_transfer, "銀行振込" %>
+      </div>
+    </div>
+    <div class="row">
+      <h6>お届け先</h6>
+      <div>
+        <%= f.radio_button %>
+      </div>
+    </div>
+    <div class="row">
+    
+    </div>
+</div>
