[Update]カート確認画面実装

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -55,15 +55,15 @@
 
           <div class="pl-5">
             郵便番号(ハイフンなし)
-            <%= f.text_field :new_post_code, placeholder: "0000000",class: 'ml-2' %>
+            <%= f.text_field :delivery_post_code, placeholder: "0000000",class: 'ml-2' %>
           </div>
           <div class="pl-5">
             住所
-            <%= f.text_field :new_address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'ml-5' %>
+            <%= f.text_field :delivery_address, placeholder: "東京都渋谷区代々木神園町0-0", class: 'ml-5' %>
           </div>
           <div class="pl-5">
             宛名
-            <%= f.text_field :new_name, placeholder: "令和道子", class: 'ml-5' %>
+            <%= f.text_field :delivery_name, placeholder: "令和道子", class: 'ml-5' %>
           </div>
 
         </div>
