--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -8,8 +8,8 @@
   <!--カート情報-->
   <div class="row">
 
-    <div class="col-5">
-      <table class="table table-border">
+    <div class="col-8">
+      <table class="table table-border border-bottom">
         <thead>
           <tr>
             <th>商品名</th>
@@ -18,33 +18,40 @@
             <th>小計</th>
           </tr>
         </thead>
+        
         <tbody>
+          <% @cart_items.each do |cart_item| %>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+              <span class="mx-2"><%= image_tag cart_item.item.get_item_image(50, 50) %></span>
+              <%= cart_item.item.name %></td>
+            <td><%= cart_item.item.with_tax_price %></td>
+            <td><%= cart_item.amount %></td>
+            <td><%= cart_item.subtotal %></td>
           </tr>
+          <% end %>
         </tbody>
+        
       </table>
     </div>
 
-    <div class="col-2">
+    <div class="col-3">
       <table class="table table-border">
-          <tr>
-            <th>送料</th>
-            <td></td>
-          </tr>
-          <tr>
-            <th>商品合計</th>
-            <td></td>
-          </tr>
-          <tr>
-            <th>請求金額</th>
-            <td></td>
-          </tr>
+        <tr>
+          <th>送料</th>
+          <td>800</td>
+        </tr>
+        <tr>
+          <th>商品合計</th>
+          <td><%= @total_price %></td>
+        </tr>
+        <tr>
+          <th>請求金額</th>
+          <td><%= @total_payment %></td>
+        </tr>
       </table>
     </div>
+    <div class="col-1"></div>
   </div>
 
   <!--支払い方法-->
@@ -63,16 +70,20 @@
       <h5>お届け先</h5>
     </div>
     <div class="col-9">
-      〒 <%= @order.delivery_post_code %>
-         <%= @order.delivery_address %>
-         <%= @order.delivery_name %>
+      <div>
+        〒<%= @order.delivery_post_code %>
+          <%= @order.delivery_address %>
+      </div>
+      <div class="pl-3">
+          <%= @order.delivery_name %>
+      </div>
     </div>
   </div>
 
   <!--送信ボタン-->
   <div class="row">
     <div class="col-2 offset-5">
-      <%= f.submit "注文を確定する", class: 'btn btn-success' %>
+      <%= f.submit "注文を確定する", class: 'btn btn-success m-5' %>
     </div>
     <div class="col-5"></div>
   </div>
