[Update]注文確定機能

--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container">
+  <div class="row p-5">
+    <h4>注文履歴一覧</h4>
+  </div>
+  
+  <div class="row">
+    <div class="col-10 offset-1">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order.each do |order| %>
+          <tr>
+            <td><%= order.created_at %></td>
+            <td>
+              <div>〒<%= order.delivery_post_code %></div>
+              <div><%= order.delivery_address %></div>
+              <div><%= order.delivery_name %></div>
+            </td>
+            <td><%= order.order_detail.item_id %></td>
+            <td><%= order.total_payment %></td>
+            <td><%= link_to "表示する", order_path(order), class: 'btn btn-primaty' %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-1"></div>
+  </div>
+</div>
