--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,2 +1,8 @@
-<h1>Public::Orders#thanks</h1>
-<p>Find me in app/views/public/orders/thanks.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-6 offset-3">
+      <h2 class="text-center">ご注文ありがとうございました！</h2>
+    </div>
+    <div class="col-3"></div>
+  </div>
+</div>
