--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -39,7 +39,10 @@
       <table class="table table-border">
         <tr>
           <th>送料</th>
-          <td>800</td>
+          <td>
+            <%= f.hidden_field :postage, value: @postage %>
+            <%= @postage %>
+          </td>
         </tr>
         <tr>
           <th>商品合計</th>
@@ -47,7 +50,10 @@
         </tr>
         <tr>
           <th>請求金額</th>
-          <td><%= @total_payment %></td>
+          <td>
+            <%= f.hidden_field :total_payment, value: @total_payment %>
+            <%= @total_payment %>
+          </td>
         </tr>
       </table>
     </div>
@@ -60,6 +66,7 @@
       <h5>支払方法</h5>
     </div>
     <div class="col-9">
+      <%= f.hidden_field :payment_method, value: @order.payment_method %>
       <%= @order.payment_method_i18n %>
     </div>
   </div>
@@ -71,10 +78,13 @@
     </div>
     <div class="col-9">
       <div>
+          <%= f.hidden_field :delivery_post_code, value: @order.delivery_post_code %>
         〒<%= @order.delivery_post_code %>
+          <%= f.hidden_field :delivery_address, value: @order.delivery_address %>
           <%= @order.delivery_address %>
       </div>
       <div class="pl-3">
+          <%= f.hidden_field :delivery_name, value: @order.delivery_name %>
           <%= @order.delivery_name %>
       </div>
     </div>
