--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,91 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4 class="p-4">注文履歴詳細</h4>
+  </div>
+
+  <div class="row">
+    <div class="col-7">
+      <table class="table">
+        <tr>
+          <th>購入者</th>
+          <td><%= @order.customer.last_name + @order.customer.first_name %></td>
+        </tr>
+        <tr>
+          <th>注文日</th>
+          <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+        </tr>
+        <tr>
+          <th>配送先</th>
+          <td>
+            <div>〒<%= @order.delivery_post_code %> <%= @order.delivery_address %></div>
+            <div><%= @order.delivery_name %></div>
+          </td>
+        </tr>
+        <tr>
+          <th>支払方法</th>
+          <td><%= @order.payment_method_i18n %></td>
+        </tr>
+        <tr>
+          <%= form_with model: @order, url:admin_order_path(@order), method: :patch do |f| %>
+            <th>注文ステータス</th>
+            <td>
+              <%= f.select :status, Order.statuses_i18n.invert %>
+              <%= f.submit '更新', class: 'btn btn-success' %>
+            </td>
+          <% end %>
+        </tr>
+      </table>
+    </div>
+    <div class="col-5">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_details.each do |order_detail| %>
+            <tr>
+              <td><%= order_detail.item.name %></td>
+              <td><%= order_detail.order_price %></td>
+              <td><%= order_detail.amount %></td>
+              <td><%= order_detail.subtotal %></td>
+              <td>
+                <%= form_with model: order_detail, url:admin_order_detail_path(order_detail), method: :patch do |f| %>
+                  <%= f.select :crafting_status, OrderDetail.crafting_statuses_i18n.invert %>
+                  <%= f.submit '更新', class: 'btn btn-success' %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-4">
+      <table class="table">
+        <tr>
+          <th>商品合計</th>
+          <td><%= @order.total_payment - @order.postage %></td>
+        </tr>
+        <tr>
+          <th>送料</th>
+          <td><%= @order.postage %></td>
+        </tr>
+        <tr>
+          <th>請求金額合計</th>
+          <td><%= @order.total_payment %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+</div>
