--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -25,7 +25,11 @@
               <div><%= order.delivery_address %></div>
               <div><%= order.delivery_name %></div>
             </td>
-            <td><!--%= order.item.name %--></td>
+            <td>
+              <% order.order_details.each do |order_detail| %>
+                <div><%= order_detail.item.name %></div>
+              <% end %>
+            </td>
             <td><%= order.total_payment %></td>
             <td><%= order.status_i18n %></td>
             <td><%= link_to "表示する", order_path(order), class: 'btn btn-primary' %></td>
