--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="row">
-    <div class="col-10 offset-1">
+    <div class="col-12">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -38,6 +38,6 @@
         </tbody>
       </table>
     </div>
-    <div class="col-1"></div>
+    <!--<div class="col-1"></div>-->
   </div>
 </div>
