--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -57,7 +57,7 @@
   <div class="row">
     <div class="col-2">ステータス</div>
     <div class="col-10">
-      <%= @customer.is_deleted %>
+      <%= @customer.is_deleted ? '有効' : '無効' %>
     </div>
   </div>
 
