--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div>
         販売ステータス
-        <%= @item.is_sale %>
+        <%= @item.is_sale ? '販売中' : '販売停止中' %>
       </div>
     </div>
     <div class="row my-4">
