[Update]商品詳細画面

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -27,7 +27,7 @@
               <%= image_tag item.get_item_image(150, 200) %>
             <% end %>
             <%= item.name %>
-            <%= item.price %>
+            ￥<%= item.price %>
 
           <% end %>
         </div>
