--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -32,7 +32,7 @@
           <% end %>
         </div>
 
-        <%= paginate @items %>
+        <!--%= paginate @items %>-->
 
       <!--% end %>-->
 
