--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -14,7 +14,7 @@
 
         <h3 class="mb-2"><%= @item.name %></h3>
         <h5 class="p-2"><%= @item.introduction %></h5>
-        <div class="pl-2"><%= @price %>(税込)</div>
+        <div class="pl-2"><%= @item.with_tax_price %>(税込)</div>
         <div class="p-2">
           <%= f.hidden_field :item_id, :value => @item.id %>
           <%= f.label :amount, "個数選択" %>
