--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -3,16 +3,16 @@
 
   <ul class="list-unstyled px-2">
     <li class="p-2">
-      ケーキ
+      <%= link_to "ケーキ", items_path(genre_name: "#{1}") %>
     </li>
     <li class="p-2">
-      焼き菓子
+      <%= link_to "焼き菓子", items_path(genre_name: "#{3}") %>
     </li>
     <li class="p-2">
-      プリン
+      <%= link_to "プリン", items_path(genre_name: "#{2}") %>
     </li>
     <li class="p-2">
-      キャンディ
+      <%= link_to "キャンディ", items_path(genre_name: "#{4}") %>
     </li>
   </ul>
 </div>
