--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -61,6 +61,7 @@
               <td><%= order_detail.subtotal %></td>
               <td>
                 <%= form_with model: order_detail, url:admin_order_detail_path(order_detail), method: :patch do |f| %>
+                  <%= f.hidden_field :order_id, :value => order_detail.order_id %>
                   <%= f.select :crafting_status, OrderDetail.crafting_statuses_i18n.invert %>
                   <%= f.submit '更新', class: 'btn btn-success' %>
                 <% end %>
