--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -2,17 +2,10 @@
   <h5 class="border-bottom p-2 text-center">ジャンル検索</h5>
 
   <ul class="list-unstyled px-2">
+    <% genres.each do |genre| %>
     <li class="p-2">
-      <%= link_to "ケーキ", items_path(genre_name: "#{1}") %>
+      <%= link_to genre.name, items_path(name: genre.id) %>
     </li>
-    <li class="p-2">
-      <%= link_to "焼き菓子", items_path(genre_name: "#{3}") %>
-    </li>
-    <li class="p-2">
-      <%= link_to "プリン", items_path(genre_name: "#{2}") %>
-    </li>
-    <li class="p-2">
-      <%= link_to "キャンディ", items_path(genre_name: "#{4}") %>
-    </li>
+    <% end %>
   </ul>
 </div>
