--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-2 my-3">
-      <%= render 'public/left_contents' %>
+      <%= render 'public/left_contents', genres: @genres %>
     </div>
 
     <div class="col-9">
