[Break]ステータス更新

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <div class="col-6 mb-2 float-right">
               <%= form_with url:items_path(current_customer), method: :get do |f| %>
   
-                <%= f.text_field :item_name, placeholder: "Seach" %>
+                <%= f.text_field :seach, placeholder: "Seach" %>
                 <%= f.button :type => "submit", class: "btn btn-light" do %>
                     <i class="fas fa-search"></i>
                 <% end %>
@@ -81,7 +81,7 @@
             <div class="col-6 mb-2 float-right">
               <%= form_with url:admin_items_path, method: :get do |f| %>
   
-                <%= f.text_field :item_name, placeholder: "Seach" %>
+                <%= f.text_field :seach, placeholder: "Seach" %>
                 <%= f.button :type => "submit", class: "btn btn-light" do %>
                     <i class="fas fa-search"></i>
                 <% end %>
