--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -3,7 +3,7 @@
     <h4>配送先登録/一覧</h4>
   </div>
 
-  <%= form_with model: @address, url:addresses_path, method: :post do |f| %>
+  <%= form_with model: @address, url:addresses_path(@customer), method: :post do |f| %>
 
     <div class="row py-1">
       <div class="col-3">郵便番号(ハイフンなし)</div>
