--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-2 pt-3">
-      <%= render 'public/left_contents' %>
+      <%= render 'public/left_contents', genres: @genres %>
     </div>
 
     <div class="col-3 p-4">
