--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,130 +8,142 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application.css", :media => "all" %>
   </head>
 
   <!--header-->
   <header>
-    <nav class="bg-warning">
+    <nav class="bg-secondary">
       <div class="container">
+
         <div class="row">
 
-        <div class="col-5 d-flex align-items-center">
-          <h1>
-            <%= link_to "ながのCAKE", root_path %>
-          </h1>
-        </div>
+          <div class="col-3 d-flex align-items-center">
+            <h1 class="">
+              <%= link_to "ながのCAKE", root_path, class: 'text-white text-decoration-none' %>
+            </h1>
+          </div>
 
-        <div class="col-7">
+          <div class="col-9 mt-3">
 
-            <!--顧客ログイン時-->
-          <% if customer_signed_in? %>
-            <ul class="navbar list-inline-item list-unstyled">
-  
-              <div>ようこそ、<%= current_customer.last_name %>さん！</div>
-  
-              <li class="nav-item btn btn-light text-decoration-none">
-                <%= link_to "マイページ", customers_mypage_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "商品一覧", items_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "カート", cart_items_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-              </li>
-              
-            </ul>
+              <!--顧客ログイン時-->
+            <% if customer_signed_in? %>
+              <ul class="navbar list-inline-item list-unstyled">
 
-            <div class="col-6 mb-2 float-right">
-              <%= form_with url:items_path(current_customer), method: :get do |f| %>
-  
-                <%= f.text_field :seach, placeholder: "Seach" %>
-                <%= f.button :type => "submit", class: "btn btn-light" do %>
-                    <i class="fas fa-search"></i>
+                <div class="text-white">ようこそ、<%= current_customer.last_name %>さん！</div>
+
+                <li class="nav-item btn btn-light">
+                  <%= link_to "マイページ", customers_mypage_path, class: 'text-dark text-decoration-none' %>
+                </li>
+                <li class="nav-item btn btn-light">
+                  <%= link_to "商品一覧", items_path, class: 'text-dark text-decoration-none' %>
+                </li>
+                <li class="nav-item btn btn-light">
+                  <%= link_to "カート", cart_items_path, class: 'text-dark text-decoration-none' %>
+                </li>
+                <li class="nav-item btn btn-light">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'text-dark text-decoration-none' %>
+                </li>
+
+              </ul>
+
+              <div class="col-4 mb-2 float-right">
+                <%= form_with url:items_path(current_customer), method: :get do |f| %>
+
+                  <%= f.text_field :seach, placeholder: "Seach"%>
+                  <%= f.button :type => "submit", class: "btn btn-sm btn-light" do %>
+                      <i class="fas fa-search"></i>
+                  <% end %>
+
                 <% end %>
-  
-              <% end %>
-            </div>
-          
-            <!--管理者ログイン時-->
-          <% elsif admin_signed_in? %>
-            <ul class="navbar list-inline-item list-unstyled">
-  
-              <li class="nav-item btn btn-light text-decoration-none">
-                <%= link_to "商品一覧", admin_items_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "会員一覧", admin_customers_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "注文履歴一覧", admin_path %>
-              </li>
-  
-              <li class="nav-item btn btn-light">
-                <%= link_to "ジャンル一覧", admin_genres_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-              </li>
-            </ul>
-  
-            <div class="col-6 mb-2 float-right">
-              <%= form_with url:admin_items_path, method: :get do |f| %>
-  
-                <%= f.text_field :seach, placeholder: "Seach" %>
-                <%= f.button :type => "submit", class: "btn btn-light" do %>
-                    <i class="fas fa-search"></i>
+              </div>
+
+              <!--管理者ログイン時-->
+            <% elsif admin_signed_in? %>
+              <div class="col-9 float-right">
+                <ul class="navbar list-inline-item list-unstyled">
+
+                  <li class="nav-item btn btn-light text-decoration-none">
+                    <%= link_to "商品一覧", admin_items_path, class: 'text-dark text-decoration-none mx-1' %>
+                  </li>
+                  <li class="nav-item btn btn-light">
+                    <%= link_to "会員一覧", admin_customers_path, class: 'text-dark text-decoration-none mx-1' %>
+                  </li>
+                  <li class="nav-item btn btn-light">
+                    <%= link_to "注文履歴一覧", admin_path, class: 'text-dark text-decoration-none' %>
+                  </li>
+
+                  <li class="nav-item btn btn-light">
+                    <%= link_to "ジャンル一覧", admin_genres_path, class: 'text-dark text-decoration-none' %>
+                  </li>
+                  <li class="nav-item btn btn-light">
+                    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'text-dark text-decoration-none'  %>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="col-4 mb-2 float-right">
+                <%= form_with url:admin_items_path, method: :get do |f| %>
+
+                  <%= f.text_field :seach, placeholder: "Seach" %>
+                  <%= f.button :type => "submit", class: "btn btn-light" do %>
+                      <i class="fas fa-search"></i>
+                  <% end %>
+
                 <% end %>
-  
-              <% end %>
-            </div>
+              </div>
 
-            <!--一般閲覧画面時-->
-          <% else %>
-            <ul class="navbar list-inline-item list-unstyled">
-  
-              <li class="nav-item btn btn-light text-decoration-none">
-                <%= link_to "About", about_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "商品一覧", items_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "新規登録", new_customer_registration_path %>
-              </li>
-              <li class="nav-item btn btn-light">
-                <%= link_to "ログイン", new_customer_session_path %>
-              </li>
-            </ul>
-  
-            <div class="col-6 mb-2 float-right">
-              <%= form_with url:items_path, method: :get, local: true do |f| %>
-  
-                <%= f.text_field :seach, placeholder: "Seach" %>
-                <%= f.button :type => "submit", class: "btn btn-light" do %>
-                    <i class="fas fa-search"></i>
+              <!--一般閲覧画面時-->
+            <% else %>
+              <div class="col-7 offset-2 float-right">
+              <ul class="navbar list-inline-item list-unstyled">
+
+                <li class="nav-item btn btn-light text-decoration-none">
+                  <%= link_to "About", about_path, class: 'text-dark text-decoration-none mx-2'%>
+                </li>
+                <li class="nav-item btn btn-light ml-3">
+                  <%= link_to "商品一覧", items_path, class: 'text-dark text-decoration-none' %>
+                </li>
+                <li class="nav-item btn btn-light ml-3">
+                  <%= link_to "新規登録", new_customer_registration_path, class: 'text-dark text-decoration-none' %>
+                </li>
+                <li class="nav-item btn btn-light ml-3">
+                  <%= link_to "ログイン", new_customer_session_path, class: 'text-dark text-decoration-none'%>
+                </li>
+              </ul>
+
+              </div>
+              <div class="col-4 mb-2 float-right">
+                <%= form_with url:items_path, method: :get, local: true do |f| %>
+
+                  <%= f.text_field :seach, placeholder: "Seach" %>
+                  <%= f.button :type => "submit", class: "btn btn-sm btn-light" do %>
+                      <i class="fas fa-search"></i>
+                  <% end %>
+
                 <% end %>
-  
-              <% end %>
-            </div>
-          <% end %>
-        </div>
+              </div>
+            <% end %>
+          </div>
 
-
+      </div>
       </div>
     </nav>
   </header>
 
+<!--body-->
   <body>
-    <%= yield %>
+    <div class="cover">
+      <%= yield %>
+    </div>
   </body>
 
+<!--footer-->
   <footer>
-    <div class="text-warning y-5 h-75 bg-warning">
-      表示なし
+    <div class="bg-secondary">
+      <div class="footer"></div>
     </div>
   </footer>
+
+
 </html>
