[Break]topレイアウト

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
+
   <div class="row">
-    <div class="col text-center">
+    <div class="col text-center mt-5">
     <h1 class="m-3">About</h1>
     <p>
       ながのCAKEは全国発送可能なケーキ屋さんです。<br>
@@ -10,6 +11,11 @@
       ぜひご注文ください。
     </p>
     </div>
-
   </div>
+
+  <!--<div class="row">-->
+  <!--  <div class="col-12">-->
+  <!--    <img src="../../../assets/images/about_image.jpg", alt=""/>-->
+  <!--  </div>-->
+  <!--</div>-->
 </div>
