--- a/app/views/public/_left_contents.html.erb
+++ b/app/views/public/_left_contents.html.erb
@@ -1,10 +1,10 @@
-<div class="border">
+<div class="border bg-white">
   <h5 class="border-bottom p-2 text-center">ジャンル検索</h5>
 
   <ul class="list-unstyled px-2">
     <% genres.each do |genre| %>
     <li class="p-2">
-      <%= link_to genre.name, items_path(name: genre.id) %>
+      <%= link_to genre.name, items_path(name: genre.id), class: 'text-dark text-decoration-none' %>
     </li>
     <% end %>
   </ul>
