--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,17 +1,19 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-2 my-3">
+    <div class="col-2 mt-5">
       <%= render 'public/left_contents', genres: @genres %>
     </div>
 
     <div class="col-9">
-      <div>
-        <div class=" py-5 text-center">
-          ようこそ、ながのCAKEへ！<br>
-          このサイトは、ケーキ販売のECサイトになります。<br>
-          会員でない方も商品の閲覧はできますが、<br>
-          購入には会員登録が必要になります。
+      <div class="mt-5 pt-5">
+        <div class="d-flex align-items-center justify-content-center">
+          <h5 class="lh-1">
+            ようこそ、ながのCAKEへ！<br>
+            このサイトは、ケーキ販売のECサイトになります。<br>
+            会員でない方も商品の閲覧はできますが、<br>
+            購入には会員登録が必要になります。
+          </h5>
         </div>
       </div>
     </div>
@@ -28,14 +30,15 @@
   <div class="row">
     <div class="col-2"></div>
       <% @items.each do |item| %>
-        <div class="col-2">
-          <%= link_to item_path(item) do %>
-            <%= image_tag item.get_item_image(150,150) %>
+        <div class="col-2 m-3">
+          <%= link_to item_path(item) do%>
+            <div class="mr-2"><%= image_tag item.get_item_image(200,200) %></div>
           <% end %>
           <div><%= item.name %></div>
           <div>￥<%= item.with_tax_price %></div>
         </div>
       <% end %>
+    <div class="col-2"></div>
   </div>
 
 </div>
